--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 
   <body>
     <header>
-      <h1>Zinister<span>Drugs</span></h1>
+      <h1>Zinister<span>Drags</span></h1>
     </header>
+
+    <div id="main">
+      <h2>Warning</h2>
+      <p>Memetic Kill Agents have been dispersed. You are now proceeding to view content secured by the Confederacy of Zëinyastag.</p>
+    </div>
   </body>
 
 </html>
