--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
   <body>
     <header>
       <h1>Zinister<span>Drags</span></h1>
+      <div id="na">
+        <a href="">Instances</a>
+        <a href=""></a>
+      </div>
+      <style>
+        
+      </style>
     </header>
 
     <div id="main">
+      <style>
+        p, h2{
+          text-align: center;
+        }
+      </style>
       <h2>Warning</h2>
       <p>Memetic Kill Agents have been dispersed. You are now proceeding to view content secured by the Confederacy of Zëinyastag.</p>
     </div>
